# pangocairo-rs

./: .travis.yml  Cargo.toml  README.md
examples/: rotated.rs
pangocairo-sys/: Cargo.toml  build.rs
src/: font_map.rs  lib.rs
