[package]
name = "pangocairo"
version = "0.2.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango"]

[dependencies.pangocairo-sys]
git = "https://github.com/razrfalcon/pangocairo-rs"
#path = "pangocairo-sys"
version = "0.4.0"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
version = "0.3.0"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"
version = "0.2.0"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.4.0"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.2.0"

[dev-dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.2.0"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.4.0"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.4.0"
