[package]
name = "pangocairo"
version = "0.2.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango"]

[dependencies]
glib = "^0.3.0"
glib-sys = "^0.4.0"
gobject-sys = "^0.4.0"
pango = "^0.2.0"
pango-sys = "^0.4.0"
cairo-rs = "^0.2.0"
pangocairo-sys = "^0.4.0"

[dev-dependencies]
gtk = "^0.2.0"
